@@ -8,6 +8,9 @@
    - markus@cvs.openbsd.org 2001/07/18 21:10:43
      [sshpty.c]
      pr #1946, allow sshd if /dev is readonly
+   - stevesk@cvs.openbsd.org 2001/07/18 21:40:40
+     [ssh-agent.c]
+     chdir("/") from bbraun@synack.net; ok markus@
 
 20010719
  - (tim) [configure.in] put inet_aton back in AC_CHECK_FUNCS.
@@ -6081,4 +6084,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1417 2001/07/22 20:36:57 mouring Exp $
+$Id: ChangeLog,v 1.1418 2001/07/22 20:40:24 mouring Exp $
